updated site plan link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <a href="./wwr/index.html">WWR Home Page</a>
-        <a href="./wwr/plan.html">WWR Site Plan</a>
+        <a href="./wwr/site-plan-rafting.html">WWR Site Plan</a>
     </nav>
     <h1>WDD 130 home page</h1>
 </body>
