--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,9 +10,9 @@
 
 <body>
   <header>
-    <h1>Jonathan's page Site Plan</h1>
+    <h1>Epic gamers page</h1>
     <h2>Jonathan Cardiel</h2>
-    <h2>WDD 130-2</h2>
+    <h2>WDD 130-6</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -20,18 +20,18 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>To complete my homework</p>
+    <p>A guide for speedruns in video games</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>the grader of the class</p>
+    <p>every epic gamer</p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="" alt="Logo image" />
+    <img src="images/istockphoto-1160971029-170667a.jpg" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -57,7 +57,7 @@
         <td class="primary">[#800000]</td>
         <td class="secondary">[#000080]</td>
         <td class="accent1">[#008000]</td>
-        <td class="accent2"></td>
+        <td class="accent2">[#40E0D0]</td>
       </tr>
     </table>
 
@@ -67,7 +67,7 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: Open Sans
+      Heading Font: Ubuntu
       <!-- change this -->
     </h4>
     <h4>
