--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>Epic gamers page</h1>
+    <h1>White Water Rafting</h1>
     <h2>Jonathan Cardiel</h2>
     <h2>WDD 130-6</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
@@ -20,18 +20,18 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>A guide for speedruns in video games</p>
+    <p>A place to plan your water rafting</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>every epic gamer</p>
+    <p>Evryone! make sure to read our check list to verify youare eligable to partake in our plans.</p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="images/istockphoto-1160971029-170667a.jpg" alt="Logo image" />
+    <img src="images/istockphoto-955061154-170667a.jpg" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
