--- a/index.html
+++ b/index.html
@@ -9,11 +9,66 @@
 </head>
 
 <body>
-    <nav>
-        <a href="./wwr/index.html">WWR Home Page</a>
-        <a href="./wwr/site-plan-rafting.html">WWR Site Plan</a>
-    </nav>
+    <header>
+        <a id="logo link" href="index.html">
+            <img src="images/istockphoto-955061154-170667a" alt="Dry Oar Logo">
+        </a>
+        <nav>
+            <a href="./wwr/index.html">WWR Home Page</a>
+            <a href="./wwr/site-plan-rafting.html">WWR Site Plan</a>
+        </nav>
+    </header>
     <h1>WDD 130 home page</h1>
 </body>
+<div id="hero">
+    <div id="hero-box">
+        <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
+    </div>
+    <section id="hero-msg">
+        <h1 class="home-title">Have An Adventure</h1>
+        <h4>Make Memories with Dry Oar </h4>
+        <div class='button-box'>
+            <a class='book' href="contactus.html">Book Now</a>
+        </div>
+    </section>
+</div>
+</main class="home grid">
+<section class="rivers-card">
+    <img class="card-img" src="images/rivers.jpg" alt="river in forest">
+    <img class="icon" src="images/istockphoto-955061154-170667a" alt="river icon">
+    <h2>Rivers</h2>
+</section>
+<section class="camping-card">
+    <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
+    <img class="icon" src="images/fire_icon.png" alt="fire icon">
+    <h2>Camping</h2>
+</section>
+<section class="rapids-card">
+    <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
+    <img class="icon" src="images/oars.png" alt="oars icon">
+    <h2>Rapids</h2>
+</section>
+<img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
+    <section class="msg">
+        <h2>Thrills on the Horizon</h2>
+        <p>Take in the stunning scenery. There are much more than simply the rapids; there are also valleys, meadows, canyons, and high peaks. It's a wonderful way to unwind amidst the natural beauty and get away from it all. </p>
+        <a class='join' href="rivers.html">Join Us</a>
+</main>
+<footer>
+    <p>Dry Oar &copy; 2023 - Jonathan Cardiel</p>
+    <p><a href="site-plan-rafting.html">Site Plan</a></p>
+    <p><a href="contactus.html">Contact Us</a></p>
+    <div class="social">
+        <a href="https://facebook.com">
+            <img src="images/facebook.png" alt="fb icon">
+        </a>
+        <a href="https://twitter.com">
+            <img src="images/twitter.png" alt="twitter icon">
+        </a>
+        <a href="https://instagram.com">
+            <img src="images/instagram.png" alt="instagram icon">
+        </a>
+    </div>
+</footer>
 
 </html>
