moved the index

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <a id="logo link" href="index.html">
-            <img src="images/istockphoto-955061154-170667a" alt="Dry Oar Logo">
+            <img src="images/istockphoto-955061154-170667a.jpg" alt="Dry Oar Logo">
         </a>
         <nav>
             <a href="./wwr/index.html">WWR Home Page</a>
