--- a/ice/challange5.html
+++ b/ice/challange5.html
@@ -5,11 +5,11 @@
 </head>
 <body>
   <div class="container">
-    <img src="./images/title.jpg" alt="title" class="top-image">
+    <img src="./images/title.jpg" alt="title" class="banner">
     <div class="bottom-images">
-      <img src="./images/desk.jpg" alt="Bottom Image 1" class="bottom-image">
-      <img src="./images/logo.png" alt="Bottom Image 2" class="bottom-image">
-      <img src="./images/guy.jpg" alt="Bottom Image 3" class="bottom-image">
+      <img src="./images/desk.jpg" alt="Bottom Image 1" class="L">
+      <img src="./images/logo.png" alt="Bottom Image 2" class="M">
+      <img src="./images/guy.jpg" alt="Bottom Image 3" class="R">
     </div>
   </div>
 </body>
