changed the pictures

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -23,7 +23,7 @@
 
         <div id="hero">
             <div id="hero-box">
-                <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
+                <img id="hero-img" src="images/rafting10_1024.jpg" alt="People enjoying white water rafting">
             </div>
             <section id="hero-msg">
                 <h1 class="home-title">Have An Adventure</h1>
@@ -35,7 +35,7 @@
         </div>
         <main class="home-grid">
         <section class="rivers-card">
-            <img class="card-img" src="images/rivers.jpg" alt="river in forest">
+            <img class="card-img" src="images/rafting61_1024.jpg" alt="river in forest">
             <img class="icon" src="images/istockphoto-955061154-170667a.jpg" alt="river icon">
             <h2>Rivers</h2>
         </section>
