--- a/totkconstructs/site-plan.html
+++ b/totkconstructs/site-plan.html
@@ -10,9 +10,9 @@
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
-      <h2>FirstName LastName</h2>
-      <h2>WDD 130-[section]</h2>
+      <h1>TotK Constructs</h1>
+      <h2>Jonathan Cardeil</h2>
+      <h2>WDD 130-2</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -21,17 +21,17 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>Welcome to PaintGallery, your ultimate destination for exquisite art pieces. Our purpose is to provide a platform where art lovers and collectors can discover and acquire exceptional artworks. At PaintGallery, we curate a diverse collection of paintings, sculptures, and mixed media creations from talented artists worldwide. We believe in the transformative power of art, and our website serves as a virtual gallery where you can explore, appreciate, and acquire exceptional pieces that add beauty and meaning to your spaces. We strive to create an immersive experience, enabling you to easily browse, learn about the artists, and make secure purchases. Join our thriving art community at PaintGallery and find the perfect artwork that resonates with your soul.</p>  <!-- change this -->
+      <p>Welcome to The Legend of Zelda: Tears of the Kingdom Construction Hub! Our website is your gateway to a world of endless creativity and innovation. We are dedicated to providing a platform where fans of this beloved game can explore, share, and bring their construction ideas to life using the new Ultra hand abilities. Whether you're searching for inspiring blueprints or eager to contribute your own unique creations, our website is the perfect destination. Join our vibrant community, unleash your imagination, and embark on a journey of construction excellence. Get ready to leave your mark on the kingdom and forge your legend in Tear of the Kingdom!</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>Lovers of Art</p>  <!-- change this -->
+      <p>Epic gamers</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="PaintGallery.png" alt="Logo image">
+      <img src="Tearsofthekingdom.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -45,13 +45,13 @@
       <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
       <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
-      Palette URL: <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+      Palette URL: <a href="https://coolors.co/82E0AA-F4D03F-196F3D-027381-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
 
 
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#396E94]</td><td class="secondary">[#E7C24F]</td><td class="accent1">[#A43312]</td><td class="accent2"></td></tr>
+        <tr><td class="primary">[#82E0AA]</td><td class="secondary">[#F4D03F]</td><td class="accent1">[#196F3D]</td><td class="accent2">[#027381]</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -88,8 +88,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Collections</a>
+        <a href="#">Submittions</a>
       </nav>
       <hr>
       <h2>
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Collections <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Submittions  <!-- change this -->
         </div>
 
         <div class="top">
@@ -125,28 +125,29 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Welcome to the ultimate creative hub for The Legend of Zelda: Tear of the Kingdom! Our website is designed to be a treasure trove of inspiration and innovation, where fans of this beloved game can come together to explore, share, and bring their construction ideas to life using the exciting new Ultra hand abilities.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="construct 1.jpg" alt="image for homepage">
+        <img src="
+        " alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Collections</h3>
       <p>
-        [Written copy for the Page 2 here]
+        At the heart of our website is our comprehensive collection of construct ideas. We've painstakingly curated a vast array of blueprints, schematics, and step-by-step instructions for various structures, puzzles, and challenges that can be built using the Ultra hand abilities.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
+        <img src="construct 2.jpg" alt="image for page">
         <img src="#" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Submittions</h3>
       <p>
-        [Written copy for the Page 3 here]
+        We encourage users to submit their own construct ideas, complete with detailed descriptions and building instructions. This way, every user can become a contributor, sharing their unique visions and helping others bring them to life. Imagine the satisfaction of seeing your creation featured on our website and inspiring fellow Zelda fans from around the world.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
+        <img src="construct 3.jpg" alt="image for page3">
         <img src="#" alt="image for page3">
 
       </ul>
