--- a/totkconstructs/site-plan.html
+++ b/totkconstructs/site-plan.html
@@ -160,21 +160,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        [the text is off bc when i made it smaller it changed it]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="Screenshot 2023-06-19 162728.png" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        [N/A]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="Screenshot 2023-06-19 162750.png" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        [N/A]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="Screenshot 2023-06-19 162818.png" alt="page 3 wireframe">
     </main>
   </body>
 
