--- a/wwr/index.html
+++ b/wwr/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WWR Home</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -18,6 +18,7 @@
             <nav>
                 <a href="./wwr/index.html">WWR Home Page</a>
                 <a href="./wwr/site-plan-rafting.html">WWR Site Plan</a>
+                <a href="rivers.html">Our rivers</a>
             </nav>
         </header>
 
