--- a/totkconstructs/site-plan.html
+++ b/totkconstructs/site-plan.html
@@ -128,7 +128,7 @@
         Welcome to the ultimate creative hub for The Legend of Zelda: Tear of the Kingdom! Our website is designed to be a treasure trove of inspiration and innovation, where fans of this beloved game can come together to explore, share, and bring their construction ideas to life using the exciting new Ultra hand abilities.
       </p>
       <p>Images for the Home page</p>
-        <img src="construct 1.jpg" alt="image for homepage">
+        <img src="construct1.png" alt="image for homepage">
         <img src="
         " alt="image for homepage">
 
