--- a/totkconstructs/submissions.html
+++ b/totkconstructs/submissions.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <div class="nav-tab">
-    <img src="Tearsofthekingdom.png" alt="Logo" class="logo">
+    <img src="images/Tearsofthekingdom.png" alt="Logo" class="logo">
     <div class="nav-links">
       <a href="index.html">Home</a>
       <a href="collections.html">Collections</a>
@@ -17,7 +17,7 @@
       <h1 class="title">Submissions</h1>
       <p class="welcome-message-example">Welcome to the Submissions Page! Here, you can share your build blueprints and step-by-step instructions. Start by listing the necessary parts and quantities, then provide specific details on how to assemble the construct. For example, for the hoverboard, you'll need 1 steering stick and 2 zonai fans, etc.</p>
       <h2 class="subtitle"><a href="student@byui.edu">Submission at: student@byui.edu</a></h2>
-      <img src="construct 2.jpg" alt="example" class="example">
+      <img src="images/construct 3.jpg" alt="example" class="example">
     </div>
     <div class="right-side"></div>
   </div>
