--- a/totkconstructs/collections.html
+++ b/totkconstructs/collections.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <div class="nav-tab">
-    <img src="Tearsofthekingdom.png" alt="Logo" class="logo">
+    <img src="images/Tearsofthekingdom.png" alt="Logo" class="logo">
     <div class="nav-links">
       <a href="index.html">Home</a>
       <a href="submissions.html">Submissions</a>
@@ -17,7 +17,7 @@
       <h1 class="title">Collections</h1>
       <p class="welcome-message">Discover purpose-built products tailored to your specific needs in our Collections Page, offering a diverse range of builds for every necessity.</p>
       <h2 class="subtitle">Transportation</h2>
-        <img src="construct 2.jpg" alt="trasnportation1" class="trasnportation1">
+        <img src="imgaes/construct 2.jpg" alt="trasnportation1" class="trasnportation1">
       </a>
     </div>
     <div class="right-side"></div>
