--- a/totkconstructs/index.html
+++ b/totkconstructs/index.html
@@ -18,7 +18,7 @@
       <p class="welcome-message">Welcome to the ultimate creative hub for The Legend of Zelda: Tear of the Kingdom! Our website is designed to be a treasure trove of inspiration and innovation, where fans of this beloved game can come together to explore, share, and bring their construction ideas to life using the exciting new Ultra Hand abilities.</p>
       <h2 class="subtitle">Hottest Build</h2>
       <a href="#" class="hottest-build-link">
-        <img src="construct1.png" alt="Hottest Build Image" class="hottest-build-image">
+        <img src="images/construct1.png" alt="Hottest Build Image" class="hottest-build-image">
       </a>
     </div>
     <div class="right-side"></div>
