--- a/totkconstructs/index.html
+++ b/totkconstructs/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <div class="nav-tab">
-    <img src="Tearsofthekingdom.png" alt="Logo" class="logo">
+    <img src="images/Tearsofthekingdom.png" alt="Logo" class="logo">
     <div class="nav-links">
       <a href="collections.html">Collections</a>
       <a href="submissions.html">Submissions</a>
