--- a/totkconstructs/site-plan.html
+++ b/totkconstructs/site-plan.html
@@ -31,7 +31,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="Tearsofthekingdom.png" alt="Logo image">
+      <img src="/totkconstructs/images/Tearsofthekingdom.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -128,7 +128,7 @@
         Welcome to the ultimate creative hub for The Legend of Zelda: Tear of the Kingdom! Our website is designed to be a treasure trove of inspiration and innovation, where fans of this beloved game can come together to explore, share, and bring their construction ideas to life using the exciting new Ultra hand abilities.
       </p>
       <p>Images for the Home page</p>
-        <img src="construct1.png" alt="image for homepage">
+        <img src="images/construct1.png" alt="image for homepage">
         <img src="
         " alt="image for homepage">
 
@@ -138,7 +138,7 @@
         At the heart of our website is our comprehensive collection of construct ideas. We've painstakingly curated a vast array of blueprints, schematics, and step-by-step instructions for various structures, puzzles, and challenges that can be built using the Ultra hand abilities.
       </p>
       <p>Images for the Page 2</p>
-        <img src="construct 2.jpg" alt="image for page">
+        <img src="images/construct 2.jpg" alt="image for page">
         <img src="#" alt="image for page">
 
       </ul>
@@ -147,7 +147,7 @@
         We encourage users to submit their own construct ideas, complete with detailed descriptions and building instructions. This way, every user can become a contributor, sharing their unique visions and helping others bring them to life. Imagine the satisfaction of seeing your creation featured on our website and inspiring fellow Zelda fans from around the world.
       </p>
       <p>Images for the Page 3</p>
-        <img src="construct 3.jpg" alt="image for page3">
+        <img src="images/construct 3.jpg" alt="image for page3">
         <img src="#" alt="image for page3">
 
       </ul>
@@ -162,19 +162,19 @@
       <p>         
         [the text is off bc when i made it smaller it changed it]
       </p>
-      <img src="Screenshot 2023-06-19 162728.png" alt="home page wireframe">
+      <img src="images/Screenshot 2023-06-19 162728.png" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
         [N/A]
       </p>
-      <img src="Screenshot 2023-06-19 162750.png" alt="page 2 wireframe">
+      <img src="images/Screenshot 2023-06-19 162750.png" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
         [N/A]
       </p>
-      <img src="Screenshot 2023-06-19 162818.png" alt="page 3 wireframe">
+      <img src="images/Screenshot 2023-06-19 162818.png" alt="page 3 wireframe">
     </main>
   </body>
 
