--- a/totkconstructs/collections.html
+++ b/totkconstructs/collections.html
@@ -17,7 +17,7 @@
       <h1 class="title">Collections</h1>
       <p class="welcome-message">Discover purpose-built products tailored to your specific needs in our Collections Page, offering a diverse range of builds for every necessity.</p>
       <h2 class="subtitle">Transportation</h2>
-        <img src="imgaes/construct 2.jpg" alt="trasnportation1" class="trasnportation1">
+        <img src="images/construct 2.jpg" alt="trasnportation1" class="trasnportation1">
       </a>
     </div>
     <div class="right-side"></div>
